--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Jawad Haider&nbsp</h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/tararjawad/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+    &nbsp;
+    <a href="https://www.novish.me" style="color: white;"><i class="fas fa-globe" style="font-size: 2em;"></i></a>
+    &nbsp;
+    <a href="https://github.com/tararjawad" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+    &nbsp;
+    <a href="mailto:jawad@novish.me" style="color: white;" target="_self"><i class="fas fa-envelope" style="font-size: 2em;"></i></a>
     &nbsp
   </div>
 </div>
